--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DiteBattle</string>
+    <string name="app_name">BBATTLE</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -9,7 +9,4 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="naver_client_id">TmQVLP6fpMoacmakiAI0</string>
-    <string name="naver_client_secret">uIrHZRLVym</string>
-    <string name="naver_client_name">dietBattle</string>
 </resources>
